--- a/thanks.html
+++ b/thanks.html
@@ -226,9 +226,49 @@
             <td><a href="https://x.com/i/user/1603307856136003585">ジャジャ様</a></td>
           </tr>   
           <tr>
+            <td>西武秩父線</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>西武豊島線</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>西武有楽町線</td>
+            <td><a href="https://x.com/i/user/1708083668785463296">梅ぼし様</a></td>
+          </tr>        
+          <tr>
+            <td>西武狭山線</td>
+            <td><a href="https://x.com/i/user/1697241690283880448">西武沿線様</a></td>
+          </tr>    
+          <tr>
+            <td>西武新宿線</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>西武拝島線</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>西武多摩湖線</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>西武国分寺線</td>
+            <td><a href="https://x.com/i/user/1603307856136003585">ジャジャ様</a></td>
+          </tr>   
+          <tr>
+            <td>西武西武園線</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
             <td>西武多摩川線</td>
             <td><a href="https://x.com/i/user/1838830591661514752">北多磨様</a></td>
           </tr>  
+          <tr>
+            <td>西武山口線</td>
+            <td><a href="https://x.com/i/user/1711384521147555840">みたか様</a></td>
+          </tr>
         </tbody>
       </table>
       <h1>サイトBGM提供</h1>
@@ -2387,17 +2427,141 @@
             <td>Source様</td>
           </tr>
           <tr>
+            <td>西武メロディ1</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>西武メロディ2</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
             <td>西武メロディ3</td>
             <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
-          </tr>          
+          </tr>     
+          <tr>
+            <td>西武メロディ4</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>西武メロディ5</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>         
           <tr>
             <td>西武メロディ6</td>
             <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
-          </tr>          
+          </tr>     
+          <tr>
+            <td>西武メロディ7</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>西武メロディ8</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>         
           <tr>
             <td>オリジナル曲(武蔵境A)</td>
             <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
-          </tr>          
+          </tr>      
+          <tr>
+            <td>俺は怪物くんだ verA</td>
+            <td><a href="https://x.com/i/user/1067983278961942528">とらむじっく様</a></td>
+          </tr>
+          <tr>
+            <td>俺は怪物くんだ verB</td>
+            <td><a href="https://x.com/i/user/1067983278961942528">とらむじっく様</a></td>
+          </tr>
+          <tr>
+            <td>楽しい場所</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>きれいな川</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>DESIRE-情熱-</td>
+            <td><a href="https://x.com/i/user/2011301882548105216">てーこく様</a></td>
+          </tr>
+          <tr>
+            <td>セカンド・ラブ</td>
+            <td><a href="https://x.com/i/user/2011301882548105216">てーこく様</a></td>
+          </tr>
+          <tr>
+            <td>さんぽ verA</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>さんぽ verB</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>となりのトトロ verA</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>となりのトトロ verB</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>となりのトトロ verC</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>茶つみ 上りver</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>茶つみ 下りver</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>        
+          <tr>
+            <td>旅立ちの日に Aメロver</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>旅立ちの日に サビver</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>        
+          <tr>
+            <td>若き獅子たち</td>
+            <td><a href="https://x.com/i/user/2011301882548105216">てーこく様</a></td>
+          </tr>
+          <tr>
+            <td>マルコメ味噌 verA</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>マルコメ味噌 verB</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>翔べ！ガンダム verA</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>翔べ！ガンダム verB</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>東村山音頭 verA</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>東村山音頭 verB</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>七夕さま verA</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>七夕さま verB</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>        
+          <tr>
+            <td>愛の季節</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>        
         </tbody>
       </table>
     </div>
