--- a/index.html
+++ b/index.html
@@ -217,6 +217,14 @@
           </div>
           <a href="tobu.html"></a>
         </div>
+        <!-- <div class="column">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/西武新宿線.jpg" alt="西武鉄道">
+          <div class="line">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/SeibuRailway_mark.svg/960px-SeibuRailway_mark.svg.png" alt="西武鉄道">
+            <p>西武鉄道</p>
+          </div>
+          <a href="seibu.html"></a>
+        </div> -->
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/小田急小田原線.jpeg" alt="小田急電鉄">
           <div class="line">
