--- a/line/yamanote.html
+++ b/line/yamanote.html
@@ -110,8 +110,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_6e205bb974ac4163a9f814994fdc372e~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_6e205bb974ac4163a9f814994fdc372e~mv2.png" alt="高田馬場駅">
-          <p>高田馬場駅 【未収録】</p>
-<!--           <a href="../station/takadanobaba.html"></a> -->
+          <p>高田馬場駅</p>
+          <a href="../station/takadanobaba.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_7ead5824d0f9412987647fd1706a48d9~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7ead5824d0f9412987647fd1706a48d9~mv2.png" alt="新大久保駅">
