--- a/line/tozai.html
+++ b/line/tozai.html
@@ -50,8 +50,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_02cce169b37c446a96a20ec2dbcca522~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_02cce169b37c446a96a20ec2dbcca522~mv2.png" alt="高田馬場駅">
-          <p>高田馬場駅 【未収録】</p>
-<!--           <a href="../station/takadanobaba.html"></a> -->
+          <p>高田馬場駅</p>
+          <a href="../station/takadanobaba.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_4d6bed54a4e945dbb4bed51811087a52~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_4d6bed54a4e945dbb4bed51811087a52~mv2.png" alt="早稲田駅">
