--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.22 西武池袋線等 池袋駅 #2(西武)~#特急専用(西武)",
+            text: "【ページ追加】2026.2.25 西武新宿線等 高田馬場駅･#3(西武)･#5(西武)",
+            url: null
+          },
+          {
+            text: "【機能追加】2026.2.25 トップページBGM通常使用化：「首都圏22番 アレンジver_V2」",
             url: null
           },
           {
@@ -109,10 +113,6 @@
           {
             text: "【機能追加】2026.2.11 ここからステーションベル 新路線追加：京葉線",
             url: "https://ssmn93.github.io/depart-melody/locate.html"
-          },
-          {
-            text: "【機能追加】2026.2.1 トップページBGM継続使用：2026年2月限定曲「首都圏22番 アレンジver_V2」",
-            url: null
           },
           {
             text: "【お知らせ】2026.1.13 旧実行環境「Glitch」にて登録したファイルが削除されたため、一部ページのデザインに不具合が生じております。ボタン押下音・検索ボタンの復旧は本日時点で完了し、残る各路線イメージ画像・各駅駅名標についてはページ追加の合間を見て行ってまいります。",
