--- a/thanks.html
+++ b/thanks.html
@@ -276,19 +276,15 @@
       <table>
         <tbody>
           <tr>
-            <td>2025年12月限定曲「第三の男」</td>
+            <td>【通常使用】「首都圏22番 アレンジver_V2」</td>
+            <td><a href="https://x.com/i/user/1669323825673281536">みなのん♬様</a></td>
+          </tr>
+          <tr>
+            <td>【限定】2025/12/01~2026/12/31「第三の男」</td>
             <td><a href="https://x.com/i/user/1698717122145460224">マルーンの疾風様</a></td>
           </tr>
           <tr>
-            <td>2026年1月限定曲(~1/19)「首都圏22番 アレンジver」</td>
-            <td><a href="https://x.com/i/user/1669323825673281536">みなのん♬様</a></td>
-          </tr>
-          <tr>
-            <td>2026年1月限定曲(1/19~)「首都圏22番 アレンジver_V2」</td>
-            <td><a href="https://x.com/i/user/1669323825673281536">みなのん♬様</a></td>
-          </tr>
-          <tr>
-            <td>2026年2月限定曲「首都圏22番 アレンジver_V2」</td>
+            <td>【限定】2026/01/01~2026/01/19「首都圏22番 アレンジver」</td>
             <td><a href="https://x.com/i/user/1669323825673281536">みなのん♬様</a></td>
           </tr>
         </tbody>
