--- a/thanks.html
+++ b/thanks.html
@@ -82,7 +82,7 @@
       <table>
         <tbody>
           <tr>
-            <td>南武線アイコン</td>
+            <td>各ページアイコン</td>
             <td><a href="http://www.trainfrontview.net/f-sozai.htm">Train Front View様</a></td>
           </tr>
           <tr>
@@ -2152,11 +2152,11 @@
           </tr>
           <tr>
             <td>原宿a</td>
-            <td>Sky high様</td>
+            <td>Source様</td>
           </tr>
           <tr>
             <td>原宿b</td>
-            <td>Sky high様</td>
+            <td>Source様</td>
           </tr>
           <tr>
             <td>A Day in the Metro (大手町#3)</td>
