--- a/ikst/ikst.html
+++ b/ikst/ikst.html
@@ -42,7 +42,7 @@
         <div class="message" id="message"></div>
         <script>
           const messages = [
-            "2026/2/24 佐倉駅・酒々井駅・五井駅・八幡宿駅・物井駅・巌根駅・君津駅・(東千葉駅？) メロディ変更",
+            "2026/2/25 新青森駅 メロディ変更",
           ];
 
           const messageElem = document.getElementById("message");
