--- a/station/kokubunji.html
+++ b/station/kokubunji.html
@@ -74,7 +74,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_97ed24bde5e84d118eb3560e11995d91~mv2.png/v1/fill/w_612,h_612,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/0acb38_97ed24bde5e84d118eb3560e11995d91~mv2.png" alt="国分寺駅">
           <div class="platform">
             <h2>5番線 -西武国分寺線下り</h2>
-            <p>曲名不明 【未収録】</p>
+            <p>西武メロディ4 【未収録】</p>
           </div>
           <!-- <a href="../platform/kokubunji_5.html"></a> -->
         </div>
@@ -82,7 +82,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_94b91883e16e4de9a32bef6b98bb022b~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_94b91883e16e4de9a32bef6b98bb022b~mv2.png" alt="国分寺駅">
           <div class="platform">
             <h2>7番線 -西武多摩湖線下り</h2>
-            <p>曲名不明 【未収録】</p>
+            <p>曲名不明(西武チャイム) 【未収録】</p>
           </div>
           <!-- <a href="../platform/kokubunji_7.html"></a> -->
         </div>
