--- a/index.html
+++ b/index.html
@@ -217,14 +217,14 @@
           </div>
           <a href="tobu.html"></a>
         </div>
-        <!-- <div class="column">
-          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/西武新宿線.jpg" alt="西武鉄道">
+        <div class="column">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/西武国分寺線_top.jpg" alt="西武鉄道">
           <div class="line">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/SeibuRailway_mark.svg/960px-SeibuRailway_mark.svg.png" alt="西武鉄道">
             <p>西武鉄道</p>
           </div>
           <a href="seibu.html"></a>
-        </div> -->
+        </div>
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/小田急小田原線.jpeg" alt="小田急電鉄">
           <div class="line">
@@ -240,7 +240,9 @@
             <p>横浜市営地下鉄</p>
           </div>
           <a href="yokohama_subway.html"></a>
-        </div>      
+        </div>            
+      </div>
+      <div class="container">   
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/多摩モノレール.JPG" alt="多摩モノレール">
           <div class="line">
@@ -248,18 +250,8 @@
             <p>多摩モノレール</p>
           </div>
           <a href="tama_monorail.html"></a>
-        </div>            
-      </div>
-      <div class="container">   
+        </div>      
         <div class="column">
-          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/つくばエクスプレス.jpg" alt="つくばエクスプレス">
-          <div class="line">
-            <img src="https://static.wixstatic.com/media/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png/v1/fill/w_1000,h_1000,al_c/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png" alt="つくばエクスプレス">
-            <p>つくばエクスプレス</p>
-          </div>
-          <a href="tsukuba_express.html"></a>
-        </div> 
-        <div class="column columnj" style="visibility: hidden;">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/つくばエクスプレス.jpg" alt="つくばエクスプレス">
           <div class="line">
             <img src="https://static.wixstatic.com/media/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png/v1/fill/w_1000,h_1000,al_c/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png" alt="つくばエクスプレス">
