--- a/station/hagiyama.html
+++ b/station/hagiyama.html
@@ -44,7 +44,7 @@
             <h2>1番線 -西武多摩湖線下り</h2>
             <p>西武メロディ7</p>
           </div>
-          <a href="../platform/nerima_1.html"></a>
+          <a href="../platform/hagiyama_1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_bb5e021d045d4b32a1eb96fba534d406~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_bb5e021d045d4b32a1eb96fba534d406~mv2.png" alt="萩山駅">
@@ -52,7 +52,7 @@
             <h2>2番線 -西武拝島線下り</h2>
             <p>西武メロディ5</p>
           </div>
-          <a href="../platform/nerima_2.html"></a>
+          <a href="../platform/hagiyama_2.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_bb5e021d045d4b32a1eb96fba534d406~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_bb5e021d045d4b32a1eb96fba534d406~mv2.png" alt="萩山駅">
@@ -60,7 +60,7 @@
             <h2>3番線 -西武拝島線・西武多摩湖線上り</h2>
             <p>西武メロディ1</p>
           </div>
-          <a href="../platform/nerima_3.html"></a>
+          <a href="../platform/hagiyama_3.html"></a>
         </div>       
       </div>
   </div>
