--- a/line/seibu_sayama.html
+++ b/line/seibu_sayama.html
@@ -51,7 +51,7 @@
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_3399aa921a7f45c7b100eab908a724e5~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_3399aa921a7f45c7b100eab908a724e5~mv2.png" alt="西武球場前駅">
           <p>西武球場前駅 【未収録】</p>
-          <!-- <a href="../station/seibukyujomae.html"></a> -->
+          <!-- <a href="../station/seibu_kyujomae.html"></a> -->
         </div>
       </div>
   </div>
