--- a/line/seibu_ikebukuro.html
+++ b/line/seibu_ikebukuro.html
@@ -125,8 +125,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_351e4ffff50846aaa3f0074876f2af87~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_351e4ffff50846aaa3f0074876f2af87~mv2.png" alt="西所沢駅">
-          <p>西所沢駅 【未収録】</p>
-          <!-- <a href="../station/nishitokorozawa.html"></a> -->
+          <p>西所沢駅</p>
+          <a href="../station/nishitokorozawa.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_8284caeb178c483bb01c6e07c0f563f7~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_8284caeb178c483bb01c6e07c0f563f7~mv2.png" alt="小手指駅">
