--- a/line/seibu_yamaguchi.html
+++ b/line/seibu_yamaguchi.html
@@ -50,8 +50,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_eca85a8f906a4a8685acd4d411974765~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_eca85a8f906a4a8685acd4d411974765~mv2.png" alt="西武球場前駅">
-          <p>西武球場前駅 【未収録】</p>
-          <!-- <a href="../station/seibu_kyujomae.html"></a> -->
+          <p>西武球場前駅</p>
+          <a href="../station/seibu_kyujomae.html"></a>
         </div>
       </div>
   </div>
