--- a/thanks.html
+++ b/thanks.html
@@ -2557,7 +2557,19 @@
           <tr>
             <td>愛の季節</td>
             <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
-          </tr>        
+          </tr>     
+          <tr>
+            <td>吠えろライオンズ verA</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>吠えろライオンズ verB</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>       
+          <tr>
+            <td>地平を駈ける獅子を見た</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>     
         </tbody>
       </table>
     </div>
