--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.25 西武鉄道・西武池袋線 椎名町駅･#1･#2・練馬駅･#1~#4・練馬高野台駅･#1･#2・清瀬駅･#1~#4・所沢駅･#1~#5・入間市駅･#2~#5・西武秩父線・西武秩父駅･#1~#3・西武豊島線・西武有楽町線・西武狭山線・下山口駅･#1･#2・西武新宿線・高田馬場駅･#3(西武)･#5(西武)・上井草駅･#1･#2・東村山駅･#1~#6・狭山市駅･#1･#2・本川越駅･#1･#2･#4・西武拝島線・萩山駅･#1~#3・西武多摩湖線・多摩湖駅･#1･#2・西武国分寺線・西武西武園線・西武多摩川線・是政駅・西武山口線",
+            text: "【ページ追加】2026.2.25 西武鉄道・西武池袋線 椎名町駅･#1･#2・練馬駅･#1~#4・練馬高野台駅･#1･#2・清瀬駅･#1~#4・所沢駅･#1~#5・入間市駅･#2~#5・西所沢駅･#1~#6・西武秩父線・西武秩父駅･#1~#3・西武豊島線・西武有楽町線・西武狭山線・下山口駅･#1･#2・西武球場前駅･#1~#6・西武新宿線・高田馬場駅･#3(西武)･#5(西武)・上井草駅･#1･#2・東村山駅･#1~#6・狭山市駅･#1･#2・本川越駅･#1･#2･#4・西武拝島線・萩山駅･#1~#3・西武多摩湖線・多摩湖駅･#1･#2・西武国分寺線・西武西武園線・西武多摩川線・是政駅・西武山口線",
             url: null
           },
           {
