--- a/station/rikuzentakasago.html
+++ b/station/rikuzentakasago.html
@@ -49,7 +49,7 @@
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png" alt="分倍河原駅"> -->
           <div class="platform">
-            <h2>2番線 -仙石線下り</h2>
+            <h2>2番線 -仙石線上り</h2>
             <p>ベル</p>
           </div>
           <a href="../platform/rikuzentakasago_2.html"></a>
