--- a/station/ishinomaki.html
+++ b/station/ishinomaki.html
@@ -74,15 +74,15 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png" alt="分倍河原駅"> -->
           <div class="platform">
             <h2>3番線 -石巻線上下</h2>
-            <p>ベル 【未収録】</p>
+            <p>ベル</p>
           </div>
-<!--           <a href="../platform/ishinomaki_3.html"></a> -->
+          <a href="../platform/ishinomaki_3.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png" alt="分倍河原駅"> -->
           <div class="platform">
             <h2>4番線 -石巻線上下</h2>
-            <p>ベル 【未収録】</p>
+            <p>ベル</p>
           </div>
           <a href="../platform/ishinomaki_4.html"></a>
         </div>
@@ -90,9 +90,9 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png" alt="分倍河原駅"> -->
           <div class="platform">
             <h2>5番線 -石巻線上下</h2>
-            <p>ベル 【未収録】</p>
+            <p>ベル</p>
           </div>
-<!--           <a href="../platform/ishinomaki_5.html"></a> -->
+          <a href="../platform/ishinomaki_5.html"></a>
         </div>
       </div>
   </div>
