--- a/line/senseki.html
+++ b/line/senseki.html
@@ -50,8 +50,8 @@
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_fc5a8d8a5273437bb6a17fda97015e1d~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_fc5a8d8a5273437bb6a17fda97015e1d~mv2.png" alt="御茶ノ水駅"> -->
-          <p>榴ヶ岡駅 【未収録】</p>
-<!--           <a href="../station/tsutsujigaoka.html"></a> -->
+          <p>榴ヶ岡駅</p>
+          <a href="../station/tsutsujigaoka.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_4e60f8f4bf2d454e93fde12a1856e421~mv2.png/v1/fill/w_442,h_532,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_4e60f8f4bf2d454e93fde12a1856e421~mv2.png" alt="四ツ谷駅"> -->
@@ -60,38 +60,38 @@
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_701789b66a6f47d8970ff65eff80c40a~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_701789b66a6f47d8970ff65eff80c40a~mv2.png" alt="新宿駅"> -->
-          <p>陸前原ノ町駅 【未収録】</p>
-<!--           <a href="../station/rikuzenharanomachi.html"></a> -->
+          <p>陸前原ノ町駅</p>
+          <a href="../station/rikuzenharanomachi.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_70903573ec5e4f03855c9661d5aedb16~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_70903573ec5e4f03855c9661d5aedb16~mv2.png" alt="中野駅"> -->
-          <p>苦竹駅 【未収録】</p>
-<!--           <a href="../station/nigatake.html"></a> -->
+          <p>苦竹駅</p>
+          <a href="../station/nigatake.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_97d1b29d3b9c43e791970d69ff64d64d~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_97d1b29d3b9c43e791970d69ff64d64d~mv2.png" alt="高円寺駅"> -->
-          <p>小鶴新田駅 【未収録】</p>
-<!--           <a href="../station/kodurushinden.html"></a> -->
+          <p>小鶴新田駅</p>
+          <a href="../station/kodurushinden.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_7c93c63f622d48eeb5c37f621e0a6f3a~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7c93c63f622d48eeb5c37f621e0a6f3a~mv2.png" alt="阿佐ヶ谷駅"> -->
-          <p>福田町駅 【未収録】</p>
-<!--           <a href="../station/fukudamachi.html"></a> -->
+          <p>福田町駅</p>
+          <a href="../station/fukudamachi.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_24a54554f4a6480db06921646842c33d~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_24a54554f4a6480db06921646842c33d~mv2.png" alt="荻窪駅"> -->
-          <p>陸前高砂駅 【未収録】</p>
-<!--           <a href="../station/rikuzentakasago.html"></a> -->
+          <p>陸前高砂駅</p>
+          <a href="../station/rikuzentakasago.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_f694edf0cf2e40d4881b2b412f75ad1f~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_f694edf0cf2e40d4881b2b412f75ad1f~mv2.png" alt="西荻窪駅"> -->
-          <p>中野栄駅 【未収録】</p>
-<!--           <a href="../station/nakanosakae.html"></a> -->
+          <p>中野栄駅</p>
+          <a href="../station/nakanosakae.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_2528af154dfa4dda97bfbb9da715e98c~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_2528af154dfa4dda97bfbb9da715e98c~mv2.png" alt="吉祥寺駅"> -->
-          <p>多賀城駅 【未収録】</p>
-<!--           <a href="../station/tagajo.html"></a> -->
+          <p>多賀城駅</p>
+          <a href="../station/tagajo.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_ba5387e1cb4f4b0c9c445253ed11ff4e~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_ba5387e1cb4f4b0c9c445253ed11ff4e~mv2.png" alt="三鷹駅"> -->
