--- a/thanks.html
+++ b/thanks.html
@@ -2570,6 +2570,30 @@
             <td>地平を駈ける獅子を見た</td>
             <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
           </tr>     
+          <tr>
+            <td>ベル(榴ヶ岡#1収録)</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>ベル(苦竹#1収録)</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>ベル(苦竹#2収録)</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>ベル(石巻#3収録)</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>ベル(石巻#4収録)</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>ベル(石巻#5収録)</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
