--- a/locate.html
+++ b/locate.html
@@ -1313,7 +1313,7 @@
                 <div class="rikuzenyamashita"><input type="radio" id="rikuzenyamashita_2" name="awaamatsu" style="visibility: hidden;" value="2" class="forms" /><label for="rikuzenyamashita_2">(2)</label></div>
                 <div class="rikuzenyamashita"><h3>陸前山下駅</h3></div>
               </div>
-              <div class="stationes"><div class="stationes">
+              <div class="stationes">
                 <div class="ishinomaki"><input type="radio" id="ishinomaki_2" name="ishinomaki" style="visibility: hidden;" value="1" class="forms" /><label for="ishinomaki_2">(2)</label></div>
                 <div class="ishinomaki"><input type="radio" id="ishinomaki_1" name="ishinomaki" style="visibility: hidden;" value="2" class="forms" />
                     <select onchange="syncRadioId(this)">
