--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
       <script>
         const messages = [
           {
+            text: "【機能追加】2026.2.28 ここからステーションベル 新路線追加：仙石線",
+            url: "https://ssmn93.github.io/depart-melody/locate.html"
+          },
+          {
             text: "【ページ追加】2026.2.28 仙石線 全ホーム追加完了",
             url: null
           },
@@ -109,10 +113,6 @@
           {
             text: "【機能追加】2026.2.16 実機スイッチ対応開始",
             url: null
-          },
-          {
-            text: "【機能追加】2026.2.11 ここからステーションベル 新路線追加：京葉線",
-            url: "https://ssmn93.github.io/depart-melody/locate.html"
           },
           {
             text: "【お知らせ】2026.1.13 旧実行環境「Glitch」にて登録したファイルが削除されたため、一部ページのデザインに不具合が生じております。ボタン押下音・検索ボタンの復旧は本日時点で完了し、残る各路線イメージ画像・各駅駅名標についてはページ追加の合間を見て行ってまいります。",
