--- a/locate.html
+++ b/locate.html
@@ -891,14 +891,14 @@
               <details>
                 <summary>メニューを開く</summary>
               <div class="stationes">
-                <div class="tokyo"><input type="radio" id="tokyo_1" name="tokyo" value="1" class="forms" data-timelines="2016-09-25:_o,2025-06-02:" />
+                <div class="tokyo"><input type="radio" id="tokyo_JE1" name="tokyo" value="1" class="forms" data-timelines="2016-09-25:_o,2025-06-02:" />
                     <select onchange="syncRadioId(this)">
                         <option value="tokyo_JE1">(1)</option>
                         <option value="tokyo_JE2">(2)</option>
                         <option value="tokyo_JE4">(4)</option>
                     </select>
                 </div>
-                <div class="tokyo"><input type="radio" id="tokyo_3" name="tokyo" value="2" class="forms" data-timelines="2016-09-25:_o,2025-06-02:" /><label for="tokyo_JE3">(3)</label></div>
+                <div class="tokyo"><input type="radio" id="tokyo_JE3" name="tokyo" value="2" class="forms" data-timelines="2016-09-25:_o,2025-06-02:" /><label for="tokyo_JE3">(3)</label></div>
                 <div class="tokyo"><h3>東京駅</h3></div>
               </div>
               <div class="stationes">
