--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 
       <script>
         const messages = [
-          {
-            text: "【機能追加】2026.2.28 ここからステーションベル 新路線追加：仙石線",
-            url: "https://ssmn93.github.io/depart-melody/locate.html"
-          },
+          // {
+          //   text: "【機能追加】2026.2.28 ここからステーションベル 新路線追加：仙石線",
+          //   url: "https://ssmn93.github.io/depart-melody/locate.html"
+          // },
           {
             text: "【ページ追加】2026.2.28 仙石線 全ホーム追加完了",
             url: null
