--- a/locate.html
+++ b/locate.html
@@ -998,10 +998,13 @@
               <details>
                 <summary>メニューを開く</summary>
               <div class="stationes">
-                <div class="ishinomaki"><input type="radio" id="ishinomaki_2" name="ishinomaki" value="1" class="forms mains"  data-timelines="2002-02-02:" /><label for="ishinomaki_2">(2)</label></div>
-                <div class="ishinomaki"><input type="radio" id="ishinomaki_1" name="ishinomaki" value="2" class="forms" data-timelines="2002-02-02:" />
+                <div class="ishinomaki"><input type="radio" id="ishinomaki_1" name="ishinomaki" value="1" class="forms mains"  data-timelines="holiday:_h,weekday:_w" /></div>
                     <select onchange="syncRadioId(this)">
                         <option value="ishinomaki_1">(1)</option>
+                        <option value="ishinomaki_2">(2)</option>
+                    </select>
+                <div class="ishinomaki"><input type="radio" id="ishinomaki_3" name="ishinomaki" value="2" class="forms" data-timelines="holiday:_h,weekday:_w" />
+                    <select onchange="syncRadioId(this)">
                         <option value="ishinomaki_3">(3)</option>
                         <option value="ishinomaki_4">(4)</option>
                         <option value="ishinomaki_5">(5)</option>
@@ -1315,10 +1318,13 @@
                 <div class="rikuzenyamashita"><h3>陸前山下駅</h3></div>
               </div>
               <div class="stationes">
-                <div class="ishinomaki"><input type="radio" id="ishinomaki_2" name="ishinomaki" style="visibility: hidden;" value="1" class="forms" /><label for="ishinomaki_2">(2)</label></div>
-                <div class="ishinomaki"><input type="radio" id="ishinomaki_1" name="ishinomaki" style="visibility: hidden;" value="2" class="forms" />
+                <div class="ishinomaki"><input type="radio" id="ishinomaki_1" name="ishinomaki" value="1" class="forms mains"  data-timelines="holiday:_h,weekday:_w" /></div>
                     <select onchange="syncRadioId(this)">
                         <option value="ishinomaki_1">(1)</option>
+                        <option value="ishinomaki_2">(2)</option>
+                    </select>
+                <div class="ishinomaki"><input type="radio" id="ishinomaki_3" name="ishinomaki" value="2" class="forms" data-timelines="holiday:_h,weekday:_w" />
+                    <select onchange="syncRadioId(this)">
                         <option value="ishinomaki_3">(3)</option>
                         <option value="ishinomaki_4">(4)</option>
                         <option value="ishinomaki_5">(5)</option>
