--- a/locate-test.html
+++ b/locate-test.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -77,8 +76,8 @@
                 <option value="jr_sotobo_d">JR外房線 -下り</option>
                 <option value="jr_keiyo_u">JR京葉線 -上り</option>
                 <option value="jr_keiyo_d">JR京葉線 -下り</option>
-                <!-- <option value="jr_senseki_u">JR仙石線 -上り</option>
-                <option value="jr_senseki_d">JR仙石線 -下り</option> -->
+                <option value="jr_senseki_u">JR仙石線 -上り</option>
+                <option value="jr_senseki_d">JR仙石線 -下り</option>
             </select>
           </div>
           
