--- a/locate.html
+++ b/locate.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -1003,7 +1002,7 @@
                         <option value="ishinomaki_1">(1)</option>
                         <option value="ishinomaki_2">(2)</option>
                     </select>
-                <div class="ishinomaki"><input type="radio" id="ishinomaki_3" name="ishinomaki" value="2" class="forms" data-timelines="holiday:_h,weekday:_w" />
+                <div class="ishinomaki"><input type="radio" id="ishinomaki_3" name="ishinomaki" value="2" class="forms" data-timelines="1990-01-01:" />
                     <select onchange="syncRadioId(this)">
                         <option value="ishinomaki_3">(3)</option>
                         <option value="ishinomaki_4">(4)</option>
