--- a/platform/kimitsu_2_o2.html
+++ b/platform/kimitsu_2_o2.html
@@ -180,7 +180,7 @@
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
           <option value="kimitsu_2_o2.html">Verde Rayo</option>
-          <option value="kimitsu_2.html">JRE-IKST-022-XX(首都圏36-X番)</option>
+          <option value="kimitsu_2.html">JRE-IKST-022-XX(首都圏36-2番)</option>
           <option value="kimitsu_2_o1.html">Verde Rayo V2</option>
         </select>
 
