--- a/platform/kimitsu_2_o1.html
+++ b/platform/kimitsu_2_o1.html
@@ -174,13 +174,13 @@
         <div class="content">
           <h1>君津駅 2番線(旧)「Verde Rayo V2」</h1>
           <p>収録駅:東京駅京葉地下1番線</p>
-          <p>スピーカー:小丸VOSS・新型小丸VOSS(君津)</p>
+          <p>スピーカー:小丸VOSS・新型小丸VOSS・天井型(君津)</p>
         
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
           <option value="kimitsu_2_o1.html">Verde Rayo V2</option>
-          <option value="kimitsu_2.html">JRE-IKST-022-XX(首都圏36-X番)</option>
+          <option value="kimitsu_2.html">JRE-IKST-022-XX(首都圏36-2番)</option>
           <option value="kimitsu_2_o2.html">Verde Rayo</option>
         </select>
 
