--- a/platform/kimitsu_2_o2.html
+++ b/platform/kimitsu_2_o2.html
@@ -174,7 +174,7 @@
         <div class="content">
           <h1>君津駅 2番線(旧)「Verde Rayo」</h1>
           <p>収録駅:橋本駅1番線</p>
-          <p>スピーカー:小丸VOSS・新型小丸VOSS(君津)</p>
+          <p>スピーカー:小丸VOSS・新型小丸VOSS・天井型(君津)</p>
         
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
