Update and rename kimitsu_3_o.html to kimitsu_3_o2.html

--- a/platform/kimitsu_3_o2.html
+++ b/platform/kimitsu_3_o2.html
@@ -179,8 +179,9 @@
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
-          <option value="kimitsu_3_o.html">Water Crown</option>
-          <option value="kimitsu_3.html">Verde Rayo エンドレスver</option>
+          <option value="kimitsu_3_o2.html">Water Crown</option>
+          <option value="kimitsu_3.html">JRE-IKST-022-01(首都圏36番)</option>
+          <option value="kimitsu_3_o1.html">Verde Rayo エンドレスver</option>
         </select>
 
       
