--- a/platform/kimitsu_3_o1.html
+++ b/platform/kimitsu_3_o1.html
@@ -1,21 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="君津駅3番線の発車メロディ「Verde Rayo エンドレスver」の再現ができます！">
+  <meta name="description" content="君津駅3番線(旧)の発車メロディ「Verde Rayo エンドレスver」の再現ができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
   <link rel="stylesheet" href="kimitsu_3.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
-  <meta property="og:description" content="君津駅3番線の発車メロディ「Verde Rayo エンドレスver」の再現ができます！">
-  <meta property="og:title" content="君津駅3番線「Verde Rayo エンドレスver」｜どこでもステーションベル">
+  <meta property="og:description" content="君津駅3番線(旧)の発車メロディ「Verde Rayo エンドレスver」の再現ができます！">
+  <meta property="og:title" content="君津駅3番線(旧)「Verde Rayo エンドレスver」｜どこでもステーションベル">
   <meta property="og:url" content="https://ssmn93.github.io/depart-melody">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:site_name" content="君津駅3番線「Verde Rayo エンドレスver」｜どこでもステーションベル">
-  <title>君津駅3番線「Verde Rayo エンドレスver」｜どこでもステーションベル</title>
+  <meta property="og:site_name" content="君津駅3番線(旧)「Verde Rayo エンドレスver」｜どこでもステーションベル">
+  <title>君津駅3番線(旧)「Verde Rayo エンドレスver」｜どこでもステーションベル</title>
 </head>
 <body>
   <header>
@@ -173,15 +172,16 @@
     </div>
       <div class="arrange">
         <div class="content">
-          <h1>君津駅 3番線「Verde Rayo エンドレスver」</h1>
+          <h1>君津駅 3番線(旧)「Verde Rayo エンドレスver」</h1>
           <p>収録駅:君津駅3番線</p>
-          <p>スピーカー:小丸VOSS・新型小丸VOSS</p>
+          <p>スピーカー:小丸VOSS・新型小丸VOSS・天井型</p>
         
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
-          <option value="kimitsu_3.html">Verde Rayo エンドレスver</option>
-          <option value="kimitsu_3_o.html">Water Crown</option>
+          <option value="kimitsu_3_o1.html">Verde Rayo エンドレスver</option>
+          <option value="kimitsu_3.html">JRE-IKST-022-01(首都圏36番)</option>
+          <option value="kimitsu_3_o2.html">Water Crown</option>
         </select>
       
       </div>
