--- a/thanks.html
+++ b/thanks.html
@@ -2594,6 +2594,10 @@
             <td>ベル(石巻#5収録)</td>
             <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
           </tr>
+          <tr>
+            <td>首都圏36-2番</td>
+            <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
