--- a/station/omotesando.html
+++ b/station/omotesando.html
@@ -58,33 +58,33 @@
           <img src="https://static.wixstatic.com/media/0acb38_50f2301634b14783bafff63493f90bc2~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_50f2301634b14783bafff63493f90bc2~mv2.png" alt="表参道駅">
           <div class="platform">
             <h2>3番線 -半蔵門線B線</h2>
-            <p>薫風 【未収録】</p>
+            <p>薫風</p>
           </div>
-<!--           <a href="../platform/omotesando_3.html"></a> -->
+          <a href="../platform/omotesando_3.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_14754f76f6ea480ba2a2eb42652a115d~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_14754f76f6ea480ba2a2eb42652a115d~mv2.png" alt="表参道駅">
           <div class="platform">
             <h2>4番線 -銀座線A線</h2>
-            <p>永遠に続く道 【未収録】</p>
+            <p>永遠に続く道</p>
           </div>
-<!--           <a href="../platform/omotesando_4.html"></a> -->
+          <a href="../platform/omotesando_4.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_14754f76f6ea480ba2a2eb42652a115d~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_14754f76f6ea480ba2a2eb42652a115d~mv2.png" alt="表参道駅">
           <div class="platform">
             <h2>5番線 -銀座線B線</h2>
-            <p>早瀬 【未収録】</p>
+            <p>早瀬</p>
           </div>
-<!--           <a href="../platform/omotesando_5.html"></a> -->
+          <a href="../platform/omotesando_5.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_50f2301634b14783bafff63493f90bc2~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_50f2301634b14783bafff63493f90bc2~mv2.png" alt="表参道駅">
           <div class="platform">
             <h2>6番線 -半蔵門線A線</h2>
-            <p>エントランス 【未収録】</p>
+            <p>エントランス</p>
           </div>
-<!--           <a href="../platform/omotesando_6.html"></a> -->
+          <a href="../platform/omotesando_6.html"></a>
         </div>
       </div>
   </div>
