--- a/line/ginza.html
+++ b/line/ginza.html
@@ -50,8 +50,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_bf9e2d6a65364246b3497262bf16b7eb~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_bf9e2d6a65364246b3497262bf16b7eb~mv2.png" alt="外苑前駅">
-          <p>外苑前駅 【未収録】</p>
-<!--           <a href="../station/gaienmae.html"></a> -->
+          <p>外苑前駅</p>
+          <a href="../station/gaienmae.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_d9b91f6b5da140708d29b0058107fc73~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_d9b91f6b5da140708d29b0058107fc73~mv2.png" alt="青山一丁目駅">
