--- a/line/yurakucho.html
+++ b/line/yurakucho.html
@@ -70,8 +70,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_6df9d750eeed4ebdbba9bce0d55b0a60~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_6df9d750eeed4ebdbba9bce0d55b0a60~mv2.png" alt="千川駅">
-          <p>千川駅 【未収録】</p>
-<!--           <a href="../station/senkawa.html"></a> -->
+          <p>千川駅</p>
+          <a href="../station/senkawa.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_6f08f413e9fe4bd89423d1930602df3e~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_6f08f413e9fe4bd89423d1930602df3e~mv2.png" alt="要町駅">
@@ -90,13 +90,13 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_f465c0e5c99c47aa8db7aa2c85a24dfc~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_f465c0e5c99c47aa8db7aa2c85a24dfc~mv2.png" alt="護国寺駅">
-          <p>護国寺駅 【未収録】</p>
-<!--           <a href="../station/gokokuji.html"></a> -->
+          <p>護国寺駅</p>
+          <a href="../station/gokokuji.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_16f94deaa28540c99a2ff9e3620bb928~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_16f94deaa28540c99a2ff9e3620bb928~mv2.png" alt="江戸川橋駅">
-          <p>江戸川橋駅 【未収録】</p>
-          <!-- <a href="../station/edogawabashi.html"></a> -->
+          <p>江戸川橋駅</p>
+          <a href="../station/edogawabashi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_7ea18a68186f4e679874da4718c887b7~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7ea18a68186f4e679874da4718c887b7~mv2.png" alt="飯田橋駅">
