--- a/line/namboku.html
+++ b/line/namboku.html
@@ -55,13 +55,13 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_2916296d6f9245b89e83de9840ee82ef~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_2916296d6f9245b89e83de9840ee82ef~mv2.png" alt="麻布十番駅">
-          <p>麻布十番駅 【未収録】</p>
-<!--           <a href="../station/azabujuban.html"></a> -->
+          <p>麻布十番駅</p>
+          <a href="../station/azabujuban.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_1a77ee1f6acf496583c95556d7917612~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1a77ee1f6acf496583c95556d7917612~mv2.png" alt="六本木一丁目駅">
-          <p>六本木一丁目駅 【未収録】</p>
-<!--           <a href="../station/roppongiicchome.html"></a> -->
+          <p>六本木一丁目駅</p>
+          <a href="../station/roppongiicchome.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5d2979c1894c4f22ab21877d83c545be~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5d2979c1894c4f22ab21877d83c545be~mv2.png" alt="溜池山王駅">
