--- a/line/fukutoshin.html
+++ b/line/fukutoshin.html
@@ -70,8 +70,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_75e944f5a4a44c28b92283971d8de22e~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_75e944f5a4a44c28b92283971d8de22e~mv2.png" alt="千川駅">
-          <p>千川駅 【未収録】</p>
-<!--           <a href="../station/senkawa.html"></a> -->
+          <p>千川駅</p>
+          <a href="../station/senkawa.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_762f7c08072442d4a8e790ea01a97cba~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_762f7c08072442d4a8e790ea01a97cba~mv2.png" alt="要町駅">
@@ -85,18 +85,18 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_05895728abbc41c39930d96de07226ca~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_05895728abbc41c39930d96de07226ca~mv2.png" alt="雑司が谷駅">
-          <p>雑司が谷駅 【未収録】</p>
-<!--           <a href="../station/zoshigaya.html"></a> -->
+          <p>雑司が谷駅</p>
+          <a href="../station/zoshigaya.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_769ec3813ae74669a0972abb739f3bb4~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_769ec3813ae74669a0972abb739f3bb4~mv2.png" alt="西早稲田駅">
-          <p>西早稲田駅 【未収録】</p>
-<!--           <a href="../station/nishiwaseda.html"></a> -->
+          <p>西早稲田駅</p>
+          <a href="../station/nishiwaseda.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_fbbef84280c04eeb852a2fec772814b8~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_fbbef84280c04eeb852a2fec772814b8~mv2.png" alt="東新宿駅">
-          <p>東新宿駅 【未収録】</p>
-          <!-- <a href="../station/higashishinjuku.html"></a> -->
+          <p>東新宿駅</p>
+          <a href="../station/higashishinjuku.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0e6b1df53f0b4a35bed81a5656c3abeb~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0e6b1df53f0b4a35bed81a5656c3abeb~mv2.png" alt="新宿三丁目駅">
@@ -105,8 +105,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_4cf5495acd7c457d9d6ab837cc939a7f~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_4cf5495acd7c457d9d6ab837cc939a7f~mv2.png" alt="北参道駅">
-          <p>北参道駅 【未収録】</p>
-<!--           <a href="../station/kitasando.html"></a> -->
+          <p>北参道駅</p>
+          <a href="../station/kitasando.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_b8573fe8c55844d681268d0a75a923d2~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_b8573fe8c55844d681268d0a75a923d2~mv2.png" alt="明治神宮前駅">
